Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* added protection and QA scanning for bad IFS/shopt/set manipulation
  by user code.


pkgcore 0.7.7.1: Dec 2nd, 2011

* Fix eclass metadata var (IUSE for example) stacking in metadata
  phases.

* Fix has invocations in ebuild helpers


pkgcore 0.7.7: Dec 2nd, 2011

* pmaint regen optimizations.  This is now >5x faster than 0.7.6,
  and ~3x faster than 0.7.2 (0.7.3 introduced a regression).

* restore pmaint sync support for unsynced repositories.

* support lookup of a repo by it's name, rather than just by path.
  This affects pquery --repo, pmaint sync, pmaint copy, pinspect, etc.

* --debug now again enables full traceback output for config failures.


* pkgcore 0.7.6.1: Dec 1st, 2011

* fix portage_config generation bug in 0.7.6; in the process, forced
  overlay's eclass stacking onto PORTDIR is no longer done by default.


pkgcore 0.7.6: Nov 30th, 2011

* pplugincache now removes old caches when ran.

* pkgcore now honors layout.conf masters for eclass stacking.

* pplugincache now forces an update, regardless of mtimes involved.

* pkgcore internal configuration was rewritten to be stricter, while
  allowing far more overriding.  In general, it should now do what
  you would expect.  Exact details, see the git logs.

* plugin cache format is now v3; this improves performance primarily.


pkgcore 0.7.5: Nov 7th, 2011

* pkgcore now extends masking rules to binpkg repositories; in addition,
  it now honors 'masters' for masking.  This means repositories that
  try to suppress an inherited mask that affects that repo, can now
  do so.

* fix bug- export ROOT to pkg_pretend invocations.

* pkgcore no longer export PWORKDIR; this was in use via extremely old
  libtool versions as a way to do QA; no longer needed.

* match multirepo portage behaviour; specifically, no longer force overlay
  version shadowing.


pkgcore 0.7.4: Oct 27th, 2011
